feat: create repositories and services in persistence lair